# aws-s3-automation-with-python

./: .env  README.md  READme  main.py  pyproject.toml
